ajout scripts IT et metrics